--- a/Sample-Accelerometer/index.html
+++ b/Sample-Accelerometer/index.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<header class="header">
-			<h1>Accelerometer</h1>
+			<h1>Marcelo</h1>
 		</header>
 		<div class="content">
 			<div class="action-area ch30">
